k8s-manifests/grafana-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`grafana.localhost`) || PathPrefix(`/grafana`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
